# beetle-transcriber

./: .gitignore  README.md  cache_midi.py  detect_notes.py  evaluate_experiment.py  main.py  pyproject.toml  train.py
beetle_transcriber/: audio.py  dataset.py  midi.py  model.py  training.py
configs/: baseline_v2.yaml  baseline_v3.yaml  sanity_check.yaml
src/beetle_transcriber/: audio.py  config.py  dataset.py  evaluation.py  experiment.py  inference.py  midi.py  model.py  models.py  training.py
