[project]
name = "beetle_transcriber"
version = "0.1.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "lightning>=2.6.1",
    "matplotlib>=3.10.9",
    "mido>=1.3.3",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
]

[tool.setuptools.packages.find]
include = ["beetle_transcriber*"]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
beetle-transcriber = { workspace = true }

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
